--- a/src/index.html
+++ b/src/index.html
@@ -6,16 +6,16 @@
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
-    <!-- <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&display=swap"
       rel="stylesheet"
-    /> -->
+    />
 
     <link rel="stylesheet" href="https://use.typekit.net/fin1gio.css" />
   </head>
-  <body class="font-main h-full w-full text-primary">
+  <body class="h-full w-full bg-[#fafaf9] font-body text-lg text-primary">
     <app-root></app-root>
   </body>
 </html>
