--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <app-root></app-root>
     <div id="splash" class="fixed bottom-0 left-0 right-0 top-0 z-50 bg-white transition-all duration-1000 ease-out">
       <img class="absolute left-1/2 top-1/2 h-32 -translate-x-1/2 -translate-y-1/2" src="assets/logo.svg" alt="logo">
-      <div>toto</div>
+      <div>toto1</div>
     </div>
   <script src="polyfills-RT5I6R6G.js" type="module"></script><script src="main-KXOGGFOW.js" type="module"></script></body>
 </html>
