--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="fr" class="h-full w-full">
   <head>
     <meta charset="utf-8" />
-    <title>WeddingWeb</title>
+    <title>Mariage Daniel & Madeleine</title>
     <base href="/" />
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1" />  -->
     <meta
